--- a/mrnaseq_example/Snakefile
+++ b/mrnaseq_example/Snakefile
@@ -73,7 +73,7 @@ rule index_genome:
 # ian says don't ever soft or hard clip reads
 # throwing away information
 '''
-
+'''
 rule all:
 	input:
 		expand("star_counts/{sample}.htstream_SE.Aligned.sortedByCoord.out.bam", \
@@ -86,7 +86,13 @@ rule all:
 		sample=SAMPLES), 
 		expand("star_counts/{sample}.htstream_SE.Log.out", sample=SAMPLES),
 		expand("star_counts/{sample}.htstream_SE.SJ.out.tab", sample=SAMPLES)
-
+'''
+		
+rule all:
+	input:
+		expand("samtools_index/{sample}.htstream_SE.Aligned."\
+		+"sortedByCoord.out.bam.bai", sample=SAMPLES)
+		
 rule count_reads:
 	input:
 		gdir = "star_index/",
@@ -100,8 +106,25 @@ rule count_reads:
 		"BAM SortedByCoordinate --quantMode GeneCounts --outFileNamePrefix "
 		"star_counts/{wildcards.sample}.htstream_SE. --readFilesCommand zcat "
 		"--readFilesIn {input.reads}" 
+		
+# ReadsPerGene.out.tab (GeneCounts output) columns (from manual):
+# 1: gene ID, 2: counts for unstranded RNA-seq, 3: counts for the 1st read 
+# strand aligned with RNA, 4: counts for the 2nd read strand aligned with RNA
+# choose the column based on your strandedness
+# (UCD Bioinformatics Core) use the ReadsPerGene file to generate a file for
+# analysis in R (generating counts tables)
 
+rule index_bam:	
+	input:
+		"star_counts/{sample}.htstream_SE.Aligned.sortedByCoord.out.bam"
+	output:
+		"samtools_index/{sample}.htstream_SE.Aligned.sortedByCoord.out.bam.bai"
+	shell:
+		"samtools index {input} -o {output}"
 	
+# next step: salmon
+# reference based or de-novo?
+# where to get the reference sequences? find a paper that used this method
 	
 	
 	
