--- a/mrnaseq_example/Snakefile
+++ b/mrnaseq_example/Snakefile
@@ -12,13 +12,15 @@ GENOME=["1pct_elegans"]
 REFrRNA="references/celegans_rrna.fasta"
 SAMPLEmRNA=expand("data/subset/{sample}.fastq.gz", sample=SAMPLES)
 REFGEN="references/1pct_elegans.fa"
+REFGFF="references/1pct_elegans.gffread.gtf"
 STAR_genomeSAindexNbases=8
 
 rule all:
 	input:
 		expand("HTS_output/{sample}.htsStats.json", sample=SAMPLES),
 		expand("HTS_output/{sample}.htstream_SE.fastq.gz", sample=SAMPLES),
-		directory("star_index/")
+		directory("star_index/"),
+		directory("star_results/")
 
 rule stream_hts:
 	output:
@@ -56,27 +58,18 @@ rule build_star_index:
 		"--genomeDir star_index/ --genomeFastaFiles {params.ref} --sjdbGTFfile "
 		"references/1pct_elegans.gffread.gtf"
 		
+rule align_count_star:
+	input:
+		"HTS_output/{sample}.htstream_SE.fastq.gz"
+	output:
+		directory("star_results/")
+	shell:
+		"STAR --genomeDir star_index/ --outSAMtype BAM SortedByCoordinate "
+		"--readFilesCommand zcat --readFilesIn {input} --quantMode GeneCounts "
+		"--outFileNamePrefix star_results/{sample}.star. --outWigType bedGraph"
 
 
 
-'''
-		"star_index/chrLength.txt",
-		"star_index/chrNameLength.txt",
-		"star_index/chrName.txt",
-		"star_index/chrStart.txt",
-		"star_index/exonGeTrInfo.tab",
-		"star_index/exonInfo.tab",
-		"star_index/geneInfo.tab",
-		"star_index/Genome",
-		"star_index/genomeParameters.txt",
-		"star_index/Log.out",
-		"star_index/SA",
-		"star_index/SAindex",
-		"star_index/sjdbInfo.txt",
-		"star_index/sjdbList.fromGTF.out.tab",
-		"star_index/sjdbList.out.tab",
-		"star_index/transcriptInfo.tab"
-'''
 
 
 
