--- a/algtest/config_optiso2.json
+++ b/algtest/config_optiso2.json
@@ -1,7 +1,7 @@
 {
-    "apc_dir": "../../isoforms/apc/",
+    "apc_dir": "../../datacore2024/project_splicing/smallgenes/",
     "genes": {
-        "ch.13301": ["ch.13301.fa", "ch.13301.gff3"]
+        "ch.1_1": ["ch.2_1.fa", "ch.2_1.gff3"]
     },
     "models": {
         "dpwm": "../../isoforms/models/don.pwm",
